src/styles/pages/index.scss
$standard-max-width: 600px;
$standard-margin: 25px;

.layout.landing-page {
  > main {
    > .sky {
      display: grid;
      grid-template-columns: 1fr auto 1fr;
      grid-template-rows: minmax(250px, 1fr) auto minmax(250px, 1fr);

      position: relative;
      background-image: linear-gradient(to bottom, $human-blue, $human-pink);
      min-height: 700px;
      height: 100vh;
      width: 100vw;

      > .new-hero {
        grid-column: 2;
        grid-row: 2;

        display: flex;
        flex-direction: column;
        justify-content: center;
        text-align: center;

        color: white;
        text-align: center;

        margin: 0 $standard-margin;

        @include onmobile {
          margin-top: -50px;
          margin-bottom: 30px;
        }

        > h1 {
          font-size: 2.5em;

          @include onmobile {
            font-size: 8vw;
          }
        }

        > p {
          font-size: 1.1em;

          @include onmobile {
            font-size: 3.7vw;
          }
        }

        > .container {
          > .mhi-button {
            font-weight: bold;
            padding: 1em 3em;
            width: 100%;
          }
        }
      }

      > .stars {
        grid-column: 1 / 4;
        grid-row: 1 / 4;
        padding-top: $header-height + 35px;
        height: 100%;
        width: 100%;
      }

      .mountain-background {
        position: relative;
        grid-column: 1 / 4;
        grid-row: 3 / 4;
        height: 100%;
        width: 100%;
      }

      .mountain-midground {
        position: relative;
        width: 100%;
        height: 75%;
      }

      .mountain-background1 {
        position: relative;
        width: 35%;
        height: 100%;
      }

      .mountain-background2 {
        position: relative;
        left: 20%;
        width: 80%;
        height: 100%;
      }

      .mountain-foreground {
        position: relative;
        grid-column: 1 / 4;
        grid-row: 3;
        height: 100%;
        width: 100%;
      }
    }

    > .post-sky1 {
      position: relative;
      top: -3px; // ugh
      width: 100vw;
      background-image: linear-gradient(to bottom, $human-blue, rgba(139, 160, 187, 1) 77%, white 100%);

      $astronaut-width: 44.166666667%;

      .manifesto {
        display: flex;
        padding: 100px $standard-margin 145px $standard-margin;
        justify-content: center;

        .text-container {
          max-width: $standard-max-width;
        }

        @media (max-width: 1100px) {
          flex-direction: column-reverse;

          .text-container {
            align-self: center;
          }

          .astronaut-container {
            margin: 150px 0;
            width: 100%;
          }

          .astronaut-star-group {
            width: 100%;
          }
        }

        @media (min-width: 1101px) {
          .about,
          .why {
            max-width: 500px;
          }

          .astronaut-container {
            width: $astronaut-width;
          }

          .astronaut {
            margin-right: 140px;
          }

          .astronaut-star-group {
            position: relative;
            left: 10%;
            width: 80%;
          }
        }
      }

      .about,
      .why {
        color: white;
        text-align: left;
        font-size: 1.1em;

        h2 {
          text-align: left;
          color: white;
          font-size: 2em;
          font-weight: 300;
        }
      }

      .why {
        margin-top: 100px;

        @include onmobile {
          margin-top: 30px;
        }
      }

      .astronaut-container {
        position: relative;
      }

      .astronaut {
        position: relative;
        width: 55%;
        left: 12%;
      }
    }

    .join {
      display: flex;
      flex-direction: column;
      justify-content: center;
      align-items: center;
      padding: 200px $standard-margin;

      h1 {
        color: $human-blue;
        margin-bottom: 50px;

        @include onmobile {
          font-size: 6.9vw;
        }
      }
    }

    .team-container {
      display: flex;
      justify-content: center;
      align-items: center;
      padding: 100px $standard-margin;

      @include onmobile {
        padding-top: 0;
      }
    }

    .team {
      display: flex;
      flex-direction: column;
      justify-content: center;
      align-items: center;

      max-width: 1000px;
      width: 100%;

      > .volunteer {
        margin-bottom: 40px;
        align-self: center;
        display: flex;
        flex-direction: column;

        > h1 {
          color: $human-blue;
        }

        > p {
          color: $human-blue;
        }

        button {
          font-weight: bold;
          padding-top: 16px;
          padding-bottom: 16px;
        }
      }

      > .staff {
        display: grid;
        row-gap: 20px;
        column-gap: 20px;

        grid-template-columns: repeat(auto-fit, minmax(160px, 1fr));
        max-width: 680px;

        @include onmobile {
          column-gap: 10px;
          grid-template-columns: 1fr 1fr;

          > .staff-card {
            > .staff-card__name {
              font-size: 3.7vw;
            }
            > .staff-card__title {
              font-size: 3.5vw;
            }
          }
        }

        > .staff-card {
          display: flex;
          flex-direction: column;
          align-items: center;

          > p {
            margin: 0;
            color: $human-blue;
          }

          > .staff-card__name {
            font-weight: bold;
            margin-top: 6px;
          }

          > .staff-card__image {
            width: 100%;
          }
        }
      }

      @include onmobile {
        .volunteer > h1 {
          font-size: 8vw;
        }
      }

      @media (max-width: 881px) {
        .volunteer {
          max-width: 680px;
        }
        .staff {
          align-self: center;
        }

        .volunteer button {
          align-self: center;
        }
      }

      @media (min-width: 880px) {
        flex-direction: row;
        margin-left: 50px;

        .volunteer {
          max-width: 300px;
          order: 2;
          margin-bottom: 0;
          margin-left: 40px;
          align-self: flex-start;
          flex: 1.5;
        }

        .staff {
          order: 1;
          flex-grow: 2;
        }
      }
    }
  }

  form[name='submit-application'] {
    width: 100%;
    max-width: $standard-max-width;
    margin: 0 $standard-margin;
  }

  .donate-container {
    padding: 100px $standard-margin;
    width: 100%;

    display: flex;
    justify-content: center;
    align-items: center;

    > .donate {
      max-width: $standard-max-width;
      display: flex;
      flex-direction: column;
      justify-content: center;
      align-items: center;
    }
  }
}

